[gd_scene load_steps=9 format=3 uid="uid://dcupv7h1p5be4"]

[ext_resource type="PackedScene" uid="uid://pa0j5wu1w7du" path="res://scenes/deck_and_hand.tscn" id="1_6gf0c"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_s1fn5"]
[ext_resource type="Texture2D" uid="uid://l6onrvfxupol" path="res://sprites/player-placeholder.png" id="2_erpi8"]
[ext_resource type="Script" path="res://scripts/character.gd" id="2_hnhx5"]
[ext_resource type="Texture2D" uid="uid://fx7ntwbaigke" path="res://sprites/enemy-placeholder.png" id="3_m1clj"]
[ext_resource type="Script" path="res://scripts/game_controller.gd" id="6_8xm4k"]

[sub_resource type="LabelSettings" id="LabelSettings_qrjun"]
font_size = 24
font_color = Color(0.635137, 0.144459, 0.0832287, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.243137)

[sub_resource type="LabelSettings" id="LabelSettings_fyt5l"]
font_size = 24
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.27451)

[node name="Main" type="Node2D"]
script = ExtResource("1_s1fn5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 640.0
offset_bottom = 320.0
color = Color(0.603922, 0.196078, 0.196078, 0.376471)

[node name="Label" type="Label" parent="CanvasLayer/GameOverOverlay"]
layout_mode = 0
offset_left = 249.0
offset_top = 54.0
offset_right = 379.0
offset_bottom = 88.0
text = "Game Over"
label_settings = SubResource("LabelSettings_qrjun")
horizontal_alignment = 1

[node name="VictoryOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 639.0
offset_bottom = 318.0
color = Color(1, 1, 1, 0.105882)

[node name="Label" type="Label" parent="CanvasLayer/VictoryOverlay"]
layout_mode = 0
offset_left = 276.0
offset_top = 54.0
offset_right = 357.0
offset_bottom = 88.0
text = "Victory"
label_settings = SubResource("LabelSettings_fyt5l")
horizontal_alignment = 1

[node name="DeckAndHand" parent="." instance=ExtResource("1_6gf0c")]

[node name="GameScreen" type="Node2D" parent="."]

[node name="PlayerCharacter" type="Node2D" parent="GameScreen"]
script = ExtResource("2_hnhx5")
health = 10
cards_left_to_play_in_round = 20

[node name="PlayerSprite" type="Sprite2D" parent="GameScreen/PlayerCharacter"]
position = Vector2(179, 112)
texture = ExtResource("2_erpi8")

[node name="HealthBar" type="ProgressBar" parent="GameScreen/PlayerCharacter"]
offset_left = 128.0
offset_top = 43.0
offset_right = 228.0
offset_bottom = 63.0
value = 100.0
show_percentage = false

[node name="EnemyCharacter" type="Node2D" parent="GameScreen"]
script = ExtResource("2_hnhx5")
health = 10
cards_left_to_play_in_round = 20

[node name="EnemySprite" type="Sprite2D" parent="GameScreen/EnemyCharacter"]
position = Vector2(513, 92)
texture = ExtResource("3_m1clj")

[node name="HealthBar" type="ProgressBar" parent="GameScreen/EnemyCharacter"]
offset_left = 464.0
offset_top = 23.0
offset_right = 564.0
offset_bottom = 43.0
value = 100.0
show_percentage = false

[node name="GameController" type="Node2D" parent="."]
script = ExtResource("6_8xm4k")

[connection signal="card_played" from="DeckAndHand" to="." method="_on_deck_and_hand_card_played"]
